content/reference/3.3.x/pulsar-admin/topicPolicies.md
# topicPolicies

Operations on persistent topics


```shell
$ pulsar-admin topicPolicies subcommand
```



## get-message-ttl

Get the message TTL for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-message-ttl options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-message-ttl

Set message TTL for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-message-ttl options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-message-ttl

Remove message TTL for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-message-ttl options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-max-unacked-messages-per-consumer

Get max unacked messages policy per consumer for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-max-unacked-messages-per-consumer options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-max-unacked-messages-per-consumer

Set max unacked messages policy per consumer for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-max-unacked-messages-per-consumer options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-max-unacked-messages-per-consumer

Remove max unacked messages policy per consumer for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-max-unacked-messages-per-consumer options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-max-consumers-per-subscription

Get max consumers per subscription for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-max-consumers-per-subscription options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-max-consumers-per-subscription

Set max consumers per subscription for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-max-consumers-per-subscription options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-max-consumers-per-subscription

Remove max consumers per subscription for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-max-consumers-per-subscription options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-subscription-types-enabled

Set subscription types enabled for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-subscription-types-enabled options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-subscription-types-enabled

Get subscription types enabled for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-subscription-types-enabled options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-subscription-types-enabled

Remove subscription types enabled for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-subscription-types-enabled options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-retention

Get the retention policy for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-retention options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-retention

Set the retention policy for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-retention options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-retention

Remove the retention policy for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-retention options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-backlog-quota

Get the backlog quota policies for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-backlog-quota options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-backlog-quota

Set a backlog quota policy for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-backlog-quota options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-backlog-quota

Remove a backlog quota policy from a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-backlog-quota options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-max-producers

Get max number of producers for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-max-producers options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-max-producers

Set max number of producers for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-max-producers options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-max-producers

Remove max number of producers for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-max-producers options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-max-message-size

Get max message size for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-max-message-size options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-max-message-size

Set max message size for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-max-message-size options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-max-message-size

Remove max message size for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-max-message-size options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-deduplication

Enable or disable status for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-deduplication options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-deduplication

Get the deduplication status for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-deduplication options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-deduplication

Remove the deduplication status for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-deduplication options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-deduplication-snapshot-interval

Get deduplication snapshot interval for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-deduplication-snapshot-interval options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-deduplication-snapshot-interval

Set deduplication snapshot interval for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-deduplication-snapshot-interval options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-deduplication-snapshot-interval

Remove deduplication snapshot interval for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-deduplication-snapshot-interval options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-persistence

Get the persistence policies for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-persistence options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-persistence

Set the persistence policies for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-persistence options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-persistence

Remove the persistence policy for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-persistence options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-subscription-dispatch-rate

Get subscription message-dispatch-rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-subscription-dispatch-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-subscription-dispatch-rate

Set subscription message-dispatch-rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-subscription-dispatch-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-subscription-dispatch-rate

Remove subscription message-dispatch-rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-subscription-dispatch-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-replicator-dispatch-rate

Get replicator message-dispatch-rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-replicator-dispatch-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-replicator-dispatch-rate

Set replicator message-dispatch-rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-replicator-dispatch-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-replicator-dispatch-rate

Remove replicator message-dispatch-rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-replicator-dispatch-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-publish-rate

Get publish rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-publish-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-publish-rate

Set publish rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-publish-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-publish-rate

Remove publish rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-publish-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-compaction-threshold

Get compaction threshold for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-compaction-threshold options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-compaction-threshold

Set compaction threshold for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-compaction-threshold options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-compaction-threshold

Remove compaction threshold for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-compaction-threshold options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-subscribe-rate

Get consumer subscribe rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-subscribe-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-subscribe-rate

Set consumer subscribe rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-subscribe-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-subscribe-rate

Remove consumer subscribe rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-subscribe-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-max-consumers

Get max number of consumers for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-max-consumers options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-max-consumers

Set max number of consumers for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-max-consumers options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-max-consumers

Remove max number of consumers for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-max-consumers options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-delayed-delivery

Get the delayed delivery policy for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-delayed-delivery options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-delayed-delivery

Set the delayed delivery policy on a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-delayed-delivery options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-delayed-delivery

Remove the delayed delivery policy on a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-delayed-delivery options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-dispatch-rate

Get message dispatch rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-dispatch-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-dispatch-rate

Set message dispatch rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-dispatch-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-dispatch-rate

Remove message dispatch rate for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-dispatch-rate options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-offload-policies

Get the offload policies for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-offload-policies options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-offload-policies

Set the offload policies for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-offload-policies options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-offload-policies

Remove the offload policies for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-offload-policies options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-max-unacked-messages-per-subscription

Get max unacked messages policy per subscription for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-max-unacked-messages-per-subscription options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-max-unacked-messages-per-subscription

Set max unacked messages policy on subscription for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-max-unacked-messages-per-subscription options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-max-unacked-messages-per-subscription

Remove max unacked messages policy per subscription for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-max-unacked-messages-per-subscription options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-inactive-topic-policies

Get the inactive topic policies on a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-inactive-topic-policies options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-inactive-topic-policies

Set the inactive topic policies on a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-inactive-topic-policies options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-inactive-topic-policies

Remove inactive topic policies from a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-inactive-topic-policies options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-max-subscriptions-per-topic

Get max subscriptions for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-max-subscriptions-per-topic options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-max-subscriptions-per-topic

Set max subscriptions for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-max-subscriptions-per-topic options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-max-subscriptions-per-topic

Remove max subscriptions for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-max-subscriptions-per-topic options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-schema-compatibility-strategy

Remove schema compatibility strategy on a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-schema-compatibility-strategy options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-schema-compatibility-strategy

Set schema compatibility strategy on a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-schema-compatibility-strategy options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-schema-compatibility-strategy

Get schema compatibility strategy on a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-schema-compatibility-strategy options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-entry-filters-per-topic

Get entry filters for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-entry-filters-per-topic options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-entry-filters-per-topic

Set entry filters for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-entry-filters-per-topic options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-entry-filters-per-topic

Remove entry filters for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-entry-filters-per-topic options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-auto-subscription-creation

Enable autoSubscriptionCreation for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-auto-subscription-creation options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-auto-subscription-creation

Get the autoSubscriptionCreation for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-auto-subscription-creation options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-auto-subscription-creation

Remove override of autoSubscriptionCreation for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-auto-subscription-creation options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## set-dispatcher-pause-on-ack-state-persistent

Enable dispatcherPauseOnAckStatePersistent for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies set-dispatcher-pause-on-ack-state-persistent options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-dispatcher-pause-on-ack-state-persistent

Get the dispatcherPauseOnAckStatePersistent for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies get-dispatcher-pause-on-ack-state-persistent options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## remove-dispatcher-pause-on-ack-state-persistent

Remove dispatcherPauseOnAckStatePersistent for a topic

**Command:**

```shell
$ pulsar-admin topicPolicies remove-dispatcher-pause-on-ack-state-persistent options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||

